# python-rwlocks

./: LICENSE  README.md  pyproject.toml
rwlocks/: __init__.py  base.py  manager.py
tests/: test_base.py
